implementations/antlr/src/main/gen/CParser.java
// Generated from /home/arjen/projects/tc.java/lib/bumper/implementations/antlr/src/main/antlr/com/riscure/bumper/antlr/CParser.g4 by ANTLR 4.10.1

package com.riscure.bumper.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, INTLIT=2, CONST=3, PACKED=4, TYPEDEF=5, AUTO=6, EXTERN=7, INLINE=8, 
		NORETURN=9, STATIC=10, REGISTER=11, VOLATILE=12, RESTRICT=13, UNSIGNED=14, 
		SIGNED=15, SIZEOF=16, ALIGNAS=17, ALIGNOF=18, FLOAT=19, DOUBLE=20, VOID=21, 
		CHAR=22, SHORT=23, INT=24, LONG=25, STRUCT=26, UNION=27, ENUM=28, ATOMIC=29, 
		BOOL=30, COMPLEX=31, BUILTIN_VA_ARG=32, BUILTIN_OFFSETOF=33, ATTRIBUTE=34, 
		GENERIC=35, DEFAULT=36, ELLIPSIS=37, ADD_ASSIGN=38, SUB_ASSIGN=39, MUL_ASSIGN=40, 
		DIV_ASSIGN=41, MOD_ASSIGN=42, OR_ASSIGN=43, AND_ASSIGN=44, XOR_ASSIGN=45, 
		LEFT_ASSIGN=46, RIGHT_ASSIGN=47, LEFT=48, RIGHT=49, EQEQ=50, NEQ=51, LEQ=52, 
		GEQ=53, EQ=54, LT=55, GT=56, INC=57, DEC=58, PTR=59, PLUS=60, MINUS=61, 
		STAR=62, SLASH=63, PERCENT=64, BANG=65, ANDAND=66, BARBAR=67, AND=68, 
		BAR=69, HAT=70, QUESTION=71, COLON=72, TILDE=73, LBRACE=74, RBRACE=75, 
		LBRACK=76, RBRACK=77, LPAREN=78, RPAREN=79, COMMA=80, DOT=81, SEMICOLON=82, 
		CONSTANT=83, ID=84, OTHER_NAME=85, VAR_NAME=86, TYPEDEF_NAME=87;
	public static final int
		RULE_program = 0, RULE_identifier_list = 1, RULE_storage_class_specifier = 2, 
		RULE_type_specifier = 3, RULE_struct_or_union_specifier = 4, RULE_struct_or_union = 5, 
		RULE_struct_declaration_list = 6, RULE_struct_declaration = 7, RULE_specifier_qualifier_list = 8, 
		RULE_struct_declarator_list = 9, RULE_struct_declarator = 10, RULE_declarator = 11, 
		RULE_declarator_noattrend = 12, RULE_direct_declarator = 13, RULE_pointer = 14, 
		RULE_type_qualifier_list = 15, RULE_type_qualifier = 16, RULE_attribute_specifier = 17, 
		RULE_attribute_specifier_list = 18, RULE_gcc_attribute_list = 19, RULE_gcc_attribute = 20, 
		RULE_gcc_attribute_word = 21, RULE_type_qualifier_noattr = 22, RULE_parameter_type_list = 23, 
		RULE_parameter_list = 24, RULE_parameter_declaration = 25, RULE_abstract_declarator = 26, 
		RULE_direct_abstract_declarator = 27, RULE_argument_expression_list = 28, 
		RULE_declaration_specifiers = 29, RULE_declaration_specifiers_typespec_opt = 30, 
		RULE_function_specifier = 31, RULE_type_name = 32, RULE_constant_expression = 33, 
		RULE_primary_expression = 34, RULE_generic_selection = 35, RULE_generic_assoc_list = 36, 
		RULE_generic_association = 37, RULE_postfix_expression = 38, RULE_unary_expression = 39, 
		RULE_unary_operator = 40, RULE_cast_expression = 41, RULE_multiplicative_expression = 42, 
		RULE_additive_expression = 43, RULE_shift_expression = 44, RULE_relational_expression = 45, 
		RULE_equality_expression = 46, RULE_and_expression = 47, RULE_exclusive_OR_expression = 48, 
		RULE_inclusive_OR_expression = 49, RULE_logical_and_expression = 50, RULE_logical_OR_expression = 51, 
		RULE_conditional_expression = 52, RULE_assignment_expression = 53, RULE_assignment_operator = 54, 
		RULE_expression = 55, RULE_c_initializer = 56, RULE_initializer_list = 57, 
		RULE_designation = 58, RULE_designator_list = 59, RULE_designator = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "identifier_list", "storage_class_specifier", "type_specifier", 
			"struct_or_union_specifier", "struct_or_union", "struct_declaration_list", 
			"struct_declaration", "specifier_qualifier_list", "struct_declarator_list", 
			"struct_declarator", "declarator", "declarator_noattrend", "direct_declarator", 
			"pointer", "type_qualifier_list", "type_qualifier", "attribute_specifier", 
			"attribute_specifier_list", "gcc_attribute_list", "gcc_attribute", "gcc_attribute_word", 
			"type_qualifier_noattr", "parameter_type_list", "parameter_list", "parameter_declaration", 
			"abstract_declarator", "direct_abstract_declarator", "argument_expression_list", 
			"declaration_specifiers", "declaration_specifiers_typespec_opt", "function_specifier", 
			"type_name", "constant_expression", "primary_expression", "generic_selection", 
			"generic_assoc_list", "generic_association", "postfix_expression", "unary_expression", 
			"unary_operator", "cast_expression", "multiplicative_expression", "additive_expression", 
			"shift_expression", "relational_expression", "equality_expression", "and_expression", 
			"exclusive_OR_expression", "inclusive_OR_expression", "logical_and_expression", 
			"logical_OR_expression", "conditional_expression", "assignment_expression", 
			"assignment_operator", "expression", "c_initializer", "initializer_list", 
			"designation", "designator_list", "designator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'const'", "'packed'", "'typedef'", "'auto'", "'extern'", 
			"'inline'", "'noreturn'", "'static'", "'register'", "'volatile'", "'restrict'", 
			"'unsigned'", "'signed'", "'sizeof'", null, null, "'float'", "'double'", 
			"'void'", "'char'", "'short'", "'int'", "'long'", "'struct'", "'union'", 
			"'enum'", "'_Atomic'", "'_Bool'", "'_Complex'", "'__builtin_va_arg'", 
			"'__builtin_offsetof'", null, "'_Generic'", "'default'", "'...'", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'|='", "'&='", "'^='", "'<<='", "'>>='", 
			"'<<'", "'>>'", "'=='", "'!='", "'<='", "'>='", "'='", "'<'", "'>'", 
			"'++'", "'--'", "'->'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
			"'||'", "'&'", "'|'", "'^'", "'?'", "':'", "'~'", null, null, null, null, 
			"'('", "')'", "','", "'.'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "INTLIT", "CONST", "PACKED", "TYPEDEF", "AUTO", "EXTERN", 
			"INLINE", "NORETURN", "STATIC", "REGISTER", "VOLATILE", "RESTRICT", "UNSIGNED", 
			"SIGNED", "SIZEOF", "ALIGNAS", "ALIGNOF", "FLOAT", "DOUBLE", "VOID", 
			"CHAR", "SHORT", "INT", "LONG", "STRUCT", "UNION", "ENUM", "ATOMIC", 
			"BOOL", "COMPLEX", "BUILTIN_VA_ARG", "BUILTIN_OFFSETOF", "ATTRIBUTE", 
			"GENERIC", "DEFAULT", "ELLIPSIS", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", 
			"DIV_ASSIGN", "MOD_ASSIGN", "OR_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", 
			"LEFT_ASSIGN", "RIGHT_ASSIGN", "LEFT", "RIGHT", "EQEQ", "NEQ", "LEQ", 
			"GEQ", "EQ", "LT", "GT", "INC", "DEC", "PTR", "PLUS", "MINUS", "STAR", 
			"SLASH", "PERCENT", "BANG", "ANDAND", "BARBAR", "AND", "BAR", "HAT", 
			"QUESTION", "COLON", "TILDE", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
			"LPAREN", "RPAREN", "COMMA", "DOT", "SEMICOLON", "CONSTANT", "ID", "OTHER_NAME", 
			"VAR_NAME", "TYPEDEF_NAME"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Struct_or_union_specifierContext struct_or_union_specifier() {
			return getRuleContext(Struct_or_union_specifierContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			struct_or_union_specifier();
			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Identifier_listContext extends ParserRuleContext {
		public TerminalNode VAR_NAME() { return getToken(CParser.VAR_NAME, 0); }
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(CParser.COMMA, 0); }
		public Identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterIdentifier_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitIdentifier_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitIdentifier_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Identifier_listContext identifier_list() throws RecognitionException {
		return identifier_list(0);
	}

	private Identifier_listContext identifier_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Identifier_listContext _localctx = new Identifier_listContext(_ctx, _parentState);
		Identifier_listContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_identifier_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			match(VAR_NAME);
			}
			_ctx.stop = _input.LT(-1);
			setState(133);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Identifier_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_identifier_list);
					setState(128);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(129);
					match(COMMA);
					setState(130);
					match(VAR_NAME);
					}
					} 
				}
				setState(135);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Storage_class_specifierContext extends ParserRuleContext {
		public TerminalNode TYPEDEF() { return getToken(CParser.TYPEDEF, 0); }
		public TerminalNode EXTERN() { return getToken(CParser.EXTERN, 0); }
		public TerminalNode STATIC() { return getToken(CParser.STATIC, 0); }
		public TerminalNode AUTO() { return getToken(CParser.AUTO, 0); }
		public TerminalNode REGISTER() { return getToken(CParser.REGISTER, 0); }
		public Storage_class_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storage_class_specifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterStorage_class_specifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitStorage_class_specifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitStorage_class_specifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Storage_class_specifierContext storage_class_specifier() throws RecognitionException {
		Storage_class_specifierContext _localctx = new Storage_class_specifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_storage_class_specifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPEDEF) | (1L << AUTO) | (1L << EXTERN) | (1L << STATIC) | (1L << REGISTER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_specifierContext extends ParserRuleContext {
		public Type_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_specifier; }
	 
		public Type_specifierContext() { }
		public void copyFrom(Type_specifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NamedContext extends Type_specifierContext {
		public TerminalNode TYPEDEF_NAME() { return getToken(CParser.TYPEDEF_NAME, 0); }
		public NamedContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterNamed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitNamed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitNamed(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VoidContext extends Type_specifierContext {
		public TerminalNode VOID() { return getToken(CParser.VOID, 0); }
		public VoidContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterVoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitVoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitVoid(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolContext extends Type_specifierContext {
		public TerminalNode BOOL() { return getToken(CParser.BOOL, 0); }
		public BoolContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoubleContext extends Type_specifierContext {
		public TerminalNode DOUBLE() { return getToken(CParser.DOUBLE, 0); }
		public DoubleContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterDouble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitDouble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitDouble(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CompositeContext extends Type_specifierContext {
		public Struct_or_union_specifierContext struct_or_union_specifier() {
			return getRuleContext(Struct_or_union_specifierContext.class,0);
		}
		public CompositeContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterComposite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitComposite(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitComposite(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CharContext extends Type_specifierContext {
		public TerminalNode CHAR() { return getToken(CParser.CHAR, 0); }
		public CharContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitChar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitChar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ShortContext extends Type_specifierContext {
		public TerminalNode SHORT() { return getToken(CParser.SHORT, 0); }
		public ShortContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterShort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitShort(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParserVisitor ) return ((CParserVisitor<? extends T>)visitor).visitShort(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SignedContext extends Type_specifierContext {
		public TerminalNode SIGNED() { return getToken(CParser.SIGNED, 0); }
		public SignedContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).enterSigned(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParserListener ) ((CParserListener)listener).exitSigned(this);
		}
